Fixed issue with overflow-x on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     line-height: 1.5;
     margin: 0;
-    overflow-x: hidden;
     text-align: center;
     width: 100%;
 }
@@ -126,6 +125,9 @@ article {
     visibility: hidden;
 }
 
+.pageWrapper {
+    overflow-x: hidden;
+}
 .projectCard {
     border-radius: 20px;
     box-shadow: 0px 0px 25px #1d5324;
